[package]
name = "smtprelay-rs"
description = "A simple SMTP relay server in rust."
version = "0.1.0"
authors = ["Marirs <marirs@gmail.com>"]
edition = "2021"


[dependencies]
threadpool = "1.7.1"
num_cpus = "1.0"
clap = "2.32.0"
lettre = {version = "0.10.1", features=["builder", "native-tls", "smtp-transport"]}
log = "0.4.17"
simple_logger = "2.2.0"
serde = {version="1.0.140", features=["derive"]}
serde_yaml = "0.8.26"
base64 = "0.13.0"
tokio = {version="1.20.0", features=["full"]}